# juce-template

./: .editorconfig  CMakeLists.txt  README.md
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
